--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -29,13 +29,11 @@
             android:layout_marginRight="32dp"
             android:background="#7D7D7D"
             android:contentDescription="@{detailViewModel.number.url}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".5"
             tools:src="@tools:sample/avatars" />
@@ -47,11 +45,11 @@
             android:layout_marginTop="32dp"
             android:gravity="center_horizontal"
             android:text="@{detailViewModel.number.name}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="@dimen/size"
             app:layout_constraintEnd_toEndOf="@+id/iv_details"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/iv_details"
             app:layout_constraintTop_toBottomOf="@+id/iv_details"
-            app:layout_constraintVertical_bias="0.0"
             tools:text="text" />
 
         <TextView
@@ -61,6 +59,7 @@
             android:layout_marginTop="32dp"
             android:gravity="center_horizontal"
             android:text="@{detailViewModel.number.text}"
+            android:textSize="@dimen/size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/iv_details"
             app:layout_constraintStart_toStartOf="@+id/iv_details"
