--- a/app/src/main/res/layout/numbers_list_item.xml
+++ b/app/src/main/res/layout/numbers_list_item.xml
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{number.name}"
+            android:textSize="@dimen/size"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
